
=======================================================
		WanT code:  Log of Changes 
=======================================================


25 Aug 2017     fftqe renamed to fftxlib. (AF)

20 Aug 2017     overlap symmetrization implemented. (AF)

20 Feb 2016     kpt symmetrization seems to be working. Clenaup and commits done (AF)

27 Dec 2014     Makefile system cleaned and improved. (AF)

25 Dec 2014     implementation of kpt symmetrization in atmproj_tools completed. (AF)

-------------------------------------------------
Date: 03 Nov 2014    Version: WanT-2.5.1
-------------------------------------------------

19 Oct 2014     symmetry module updated to deal with atm_proj symmetrization. (AF)

24 Jul 2014     The structure of extlibs and plugins has been deeply changed;
		now most of the packages are directly downloaded from the web (qe-forge). (AF)

-------------------------------------------------
Date: 28 Apr 2014    Version: WanT-2.5.0
-------------------------------------------------

27 Apr 2014     wfk2etsf.x used to interface WanT and Abinit. Suggestion by
		T. Rangel. (AF)

17 Apr 2014     bugs fixed in the CRYSTAL to WanT interface. test16 and test13 updated.
		polyacetylene case added to test13. All tests runned and checked.
		References updated in tests 13,15,16 . (AF)

01 Apr 2014     bug fixed in the calculation of projdos when using non-orthogonal
		orbitals. (AF)

23 Aug 2013     workaround for gfortran introduced in overlap_calc (problems
		with ZDOTC). Another fix related to gfortran iostat in
		namelists added to postprocs. (AF)

22 Aug 2013     updates on modules concerning low-level parallelism (from QE),
		configuration, ext lib (eg lapack) management in order to avoid
		problems with gfortran. (AF) 

04 Aug 2013     positions of the atmproj orbitals reconstructed in unfold.f90
		for the sake of determining the orb_mapping. (AF)

02 Aug 2013     unfold.x utility further tested and debugged (especially when